[package]
name = "marten"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21.1"
#rapier3d = { git = "https://github.com/ryanhcode/rapier", rev = "a728067629d4f85cef99f388e12c9b0ee8cd1164", features = ["simd-nightly", "parallel"] }
#parry3d = { version = "0.26.0", features = ["simd-nightly"] }

log = "0.4.22"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
colored = "2.1.0"


[lib]
crate-type = ["lib"]
